# Label_Click

./: CMakeLists.txt  ClickableQLabel.cpp  ClickableQLabel.h  Label_Click.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
